metadata/force-app/main/default/objects/OrderItem/fields/Account_ID_18_digits__c.field-meta.xml
<CustomField>
    <fullName>Account_ID_18_digits__c</fullName>
    <formula>Order.Account.Account_ID_18_digits__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account ID (18 digits)</label>
    <type>Text</type>
</CustomField>