metadata/force-app/main/default/objects/OrderItem/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <label>Discount</label>
    <precision>11</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>