metadata/force-app/main/default/objects/OrderItem/fields/For_Contract_Renewals__c.field-meta.xml
<CustomField>
    <fullName>For_Contract_Renewals__c</fullName>
    <formula>PricebookEntry.Product2.For_Contract_Renewals__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>For Contract Renewals</label>
    <type>Checkbox</type>
</CustomField>