metadata/force-app/main/default/objects/OrderItem/fields/For_Contract_Renewals_mapped__c.field-meta.xml
<CustomField>
    <fullName>For_Contract_Renewals_mapped__c</fullName>
    <defaultValue>false</defaultValue>
    <label>For Contract Renewals mapped</label>
    <type>Checkbox</type>
</CustomField>