metadata/force-app/main/default/objects/OrderItem/fields/Netsuite_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Quantity__c</fullName>
    <description>Inverts the sign of the quantity for credit memos.</description>
    <formula>IF(Order.Total_Order_Value__c&lt;0, -1*Quantity,Quantity)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Inverts the sign of the quantity for credit memos.</inlineHelpText>
    <label>Netsuite Quantity</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>