metadata/force-app/main/default/objects/OrderItem/fields/Opportunity_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_End_Date__c</fullName>
    <formula>Order.Opportunity.End_date_contract__c</formula>
    <label>Opportunity End Date</label>
    <type>Date</type>
</CustomField>