metadata/force-app/main/default/objects/OrderItem/fields/Order_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_End_Date__c</fullName>
    <formula>Order.EndDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order End Date</label>
    <type>Date</type>
</CustomField>