metadata/force-app/main/default/objects/OrderItem/fields/Order_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Start_Date__c</fullName>
    <formula>Order.EffectiveDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Start Date</label>
    <type>Date</type>
</CustomField>