metadata/force-app/main/default/objects/OrderItem/fields/Part_of_a_package__c.field-meta.xml
<CustomField>
    <fullName>Part_of_a_package__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BODEV-2684: Checkbox to represent if the Order Item is a package product or not. Filled by Order creation flow.</description>
    <label>Part of a package?</label>
    <type>Checkbox</type>
</CustomField>