metadata/force-app/main/default/objects/OrderItem/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <formula>TEXT(Product2.Product_Category__c)</formula>
    <label>Product Category</label>
    <type>Text</type>
</CustomField>