metadata/force-app/main/default/objects/OrderItem/fields/Product_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Product_Contract_Value__c</fullName>
    <formula>IF(For_Contract_Renewals_mapped__c= TRUE ,(UnitPrice-(UnitPrice* Discount__c))*Quantity*Order.Netsuite_Term__c,(UnitPrice-(UnitPrice* Discount__c))*Quantity)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price - Order Period</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>