metadata/force-app/main/default/objects/OrderItem/fields/Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_ID__c</fullName>
    <formula>CASESAFEID(PricebookEntry.Product2.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product ID</label>
    <type>Text</type>
</CustomField>