metadata/force-app/main/default/objects/OrderItem/fields/Product_Netsuite_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_Netsuite_ID__c</fullName>
    <formula>PricebookEntry.Product2.Netsuite_New_Business_Item_Internal_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Netsuite ID</label>
    <type>Text</type>
</CustomField>