metadata/force-app/main/default/objects/OrderItem/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <formula>IF(
    Part_of_a_package__c &amp;&amp; ISPICKVAL(Product2.Product_Type__c, &quot;Add-on&quot;),
    &quot;Included&quot;,
    IF(
        ISPICKVAL(Product2.Product_Type__c, &quot;Integrations &amp; Add-ons&quot;),
        &quot;Integrations&quot;,
        TEXT(Product2.Product_Type__c)
    )
)</formula>
    <label>Product Type</label>
    <type>Text</type>
</CustomField>