metadata/force-app/main/default/objects/OrderItem/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <description>Total contract price. Mapped to field &apos;Rate&apos; in Netsuite.</description>
    <formula>IF(  For_Contract_Renewals__c= FALSE,UnitPrice*(1-Discount__c), UnitPrice*Order.Netsuite_Term__c*(1-Discount__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total contract price. Mapped to field &apos;Rate&apos; in Netsuite.</inlineHelpText>
    <label>Rate</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>