metadata/force-app/main/default/objects/OrderItem/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <formula>IF(For_Contract_Renewals__c= TRUE,Order.Netsuite_Term__c,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>