metadata/force-app/main/default/objects/OrderItem/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <formula>(UnitPrice-(UnitPrice* Discount__c))*Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price (Month)</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>